fixed footer spacing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -161,14 +161,17 @@ label {
   padding: 20px 0;
   text-align: center;
   color: #fff;
-}
 
-#copyrights a {
-  color: #f0ad4e;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
 }
 
 #copyrights p {
   margin-bottom: 5px;
+  color: #f0ad4e;
 }
 
 .list-group-item {
